# a-very-informal-journey-though-ros2

callbacks_and_executors/: CMakeLists.txt  package.xml
callbacks_and_executors/src/: main.cpp
costmap_cache/: CMakeLists.txt  package.xml
costmap_cache/src/: costmap_cache.cpp
recursive_calls/: CMakeLists.txt  package.xml
recursive_calls/src/: recursive_calls.cpp
the_node/: CMakeLists.txt  package.xml
the_node/include/: node_thread.hpp
the_node/launch/: the_node.launch.py
the_node/src/: lifecycle_client_node.cpp  managed_node_one.cpp  managed_node_starter.cpp  managed_node_two.cpp  node_thread.cpp
